# Customer-Segmentation

./: .gitignore  README.md  pyproject.toml
src/tm_custseg/: cli.py  explain.py  features.py  kselect.py  preproc.py  report.py  segment.py  viz.py
