[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tm-customer-segmentation"
version = "0.1.0"
description = "Customer segmentation on TM SQLite data: feature extraction + KMeans clustering."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "matplotlib>=3.8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tm_custseg*"]